# polynomials

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  nogo.json  polynomials_test.legacy
.github/workflows/: ci.yml
bigcomplex/: BUILD.bazel  big_utils.go  bigcomplex.go  bigcomplex_test.go
bigtrig/: BUILD.bazel  atan.go  atan_test.go  big_utils.go  pi.go
ivyshims/: BUILD.bazel  LICENSE  README.md  asin.go  asinh.go  bigfloat.go  bigint.go  bigrat.go  binary.go  char.go  complex.go  config.go  const.go  context.go  eval.go  exec_context.go  exec_function.go  exec_op_def.go  format.go  index.go  int.go  ivyshims.go  log.go  loop.go  matrix.go  power.go  sin.go  sinh.go  sqrt.go  unary.go  value.go  vector.go
maybebigcomplex/: BUILD.bazel  big_utils.go  bigcomplex.go
polynomials/: BUILD.bazel  big_complex_helpers.go  conv.go  order_four.go  order_one.go  order_three.go  order_two.go  polynomials_legacy.go  polynomials_test.go
precision/: BUILD.bazel  precision.go
