load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bigtrig",
    srcs = [
        "atan.go",
        "big_utils.go",
        "pi.go",
    ],
    importpath = "github.com/gbdubs/polynomials/bigtrig",
    visibility = ["//visibility:public"],
    deps = ["//precision"],
)

go_test(
    name = "bigtrig_test",
    srcs = ["atan_test.go"],
    embed = [":bigtrig"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
