load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ivyshims",
    srcs = [
        "asin.go",
        "asinh.go",
        "bigfloat.go",
        "bigint.go",
        "bigrat.go",
        "binary.go",
        "char.go",
        "complex.go",
        "config.go",
        "const.go",
        "context.go",
        "eval.go",
        "exec_context.go",
        "exec_function.go",
        "exec_op_def.go",
        "format.go",
        "index.go",
        "int.go",
        "ivyshims.go",
        "log.go",
        "loop.go",
        "matrix.go",
        "power.go",
        "sin.go",
        "sinh.go",
        "sqrt.go",
        "unary.go",
        "value.go",
        "vector.go",
    ],
    importpath = "github.com/gbdubs/polynomials/ivyshims",
    visibility = ["//visibility:public"],
    deps = ["//precision"],
)
