load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "maybebigcomplex",
    srcs = [
        "big_utils.go",
        "bigcomplex.go",
    ],
    importpath = "github.com/gbdubs/polynomials/maybebigcomplex",
    visibility = ["//visibility:public"],
    deps = [
        "//ivyshims",
        "//precision",
        "@com_github_gbdubs_maybebig//maybebig",
    ],
)
